syntax = "proto3";

package kvstore;

option go_package = "internal/api/protobuf";

service KVStoreService {
    // 设置键值对
    rpc Set(SetRequest) returns (SetResponse) {}
    // 获取键值对的值
    rpc Get(GetRequest) returns (GetResponse) {}
    // 删除键值对
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// Set请求包含键、值和元数据
message SetRequest {
    string key = 1;
    bytes value = 2;
    MetaData meta = 3;
}

message SetResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
    int64 clientId=2;
    int64 opId=3;
}

message GetResponse {
    bytes value = 1;
    bool success=2;
}

message DeleteRequest {
    string key = 1;
}

// Delete响应
message DeleteResponse {
    bool success = 1;
}

// 元数据信息
message MetaData {
    DataType type = 1;
    string location = 2;	
    int64 offset=3;    // 读/写操作的起始偏移量
	int64 size=4;   // 读/写操作的数据长度
}

enum DataType {
    KV_OBJ = 0;
    FILE = 1;
    BLOCK_DEVICE = 2;
}
